tweak dropdown copy

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </br>
     <label for="mallwalkers">Who are you?</label>
         <select name="mallwalkers" id="santaselect">
-            <option value="null">--Please choose a Mall Walker--</option>
+            <option value="null">--Please choose yourself--</option>
             <option value="Charlie">Charlie</option>
             <option value="Meredith">Meredith</option>
             <option value="Dean">Dean</option>
